--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
    nk.admin.parameter:
-      class: Nk\AdminBundle\Admin\ParameterAdmin
+      class: Nk\AdminBundle\Admin\ParametreAdmin
       tags:
-        - { name: sonata.admin, manager_type: orm, group: parameters, label: Parametre }
-      arguments: [null, Nk\AdminBundle\Entity\Parameter, SonataAdminBundle:CRUD]
+        - { name: sonata.admin, manager_type: orm, group: parametres, label: Parametre }
+      arguments: [null, Nk\AdminBundle\Entity\Parametre, SonataAdminBundle:CRUD]
