--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
   ],
 
   "require": {
-    "php":                          ">=5.3.2",
-    "symfony/symfony":              ">=2.0.0",
-    "sonata-project/admin-bundle":  ">=2.3.0",
-    "stof/doctrine-extensions-bundle": ">=v1.1.0",
-    "egeloen/ckeditor-bundle": ">=~2.0"
+    "php":                              ">=5.3.2",
+    "symfony/symfony":                  ">=2.0.0",
+    "sonata-project/admin-bundle":      ">=2.3.0",
+    "stof/doctrine-extensions-bundle":  ">=v1.1.0",
+    "egeloen/ckeditor-bundle":          ">=2.0"
   },
 
   "minimum-stability": "dev",
