--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     {
       "name": "Nicolas Kovacs",
       "homepage": "https://github.com/nicovak"
+      "name": "Matthieu Videaud",
+      "homepage": "https://github.com/matthv"
     }
   ],
 
