--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "authors": [
     {
       "name": "Nicolas Kovacs",
-      "homepage": "https://github.com/nicovak"
+      "homepage": "https://github.com/nicovak",
       "name": "Matthieu Videaud",
       "homepage": "https://github.com/matthv"
     }
