--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,8 @@
 
   "authors": [
     {
-      "name": "Nicolas Kovacs",
-      "homepage": "https://github.com/nicovak",
-      "name": "Matthieu Videaud",
-      "homepage": "https://github.com/matthv"
+      "name": "Nicolas Kovacs", "Matthieu Videaud"
+      "homepage": "https://github.com",
     }
   ],
 
