--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 
   "authors": [
     {
-      "name": "Nicolas Kovacs", "Matthieu Videaud"
+      "name": "Nicolas Kovacs, Matthieu Videaud"
       "homepage": "https://github.com",
     }
   ],
