--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
 
   "authors": [
     {
-      "name": "Nicolas Kovacs, Matthieu Videaud"
-      "homepage": "https://github.com",
+      "name": "Nicolas Kovacs, Matthieu Videaud",
+      "homepage": "https://github.com"
     }
   ],
 
