--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "php":                              ">=5.3.2",
     "symfony/symfony":                  ">=2.0.0",
     "sonata-project/admin-bundle":      ">=2.3.0",
-    "stof/doctrine-extensions-bundle":  ">=~1.1@dev",
+    "stof/doctrine-extensions-bundle":  "~1.1@dev",
     "egeloen/ckeditor-bundle":          ">=2.0"
   },
 
